<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/settings_title">
            
        <ListPreference
                android:key="notificationThreshold"
                android:title="@string/notification_threshold"
                android:summary="@string/notification_threshold_desc"
                android:entries="@array/threshold"
                android:entryValues="@array/threshold"
                android:dialogTitle="@string/notification_threshold"
                android:defaultValue="50%" />
        
		<CheckBoxPreference
		        android:key="adminMode"
		        android:title="@string/admin_mode"
		        android:summary="@string/admin_mode_desc"
		        android:defaultValue="false" />

		
    </PreferenceCategory>
</PreferenceScreen>